--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,6 +24,7 @@
     ~/.atom/styles.less: atom/styles.less
 
     ~/.config/redshift.conf: config/redshift.conf
+    ~/.config/i3: config/i3
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
