--- a/config/i3/status.conf
+++ b/config/i3/status.conf
@@ -23,8 +23,8 @@ order += "load"
 order += "tztime local"
 
 wireless _first_ {
-  format_up = "W: (%quality at %essid) %ip"
-  format_down = "W: down"
+  format_up = " (%quality at %essid) %ip"
+  format_down = " down"
 }
 
 ethernet _first_ {
@@ -34,7 +34,10 @@ ethernet _first_ {
 }
 
 battery 1 {
-  format = "%status %percentage %remaining"
+  status_chr = "⚇ CHR"
+  status_bat = ""
+  status_full = "☻ FULL"
+  format = "%status %percentage (%remaining)"
 }
 
 run_watch DHCP {
@@ -46,7 +49,7 @@ run_watch VPN {
 }
 
 tztime local {
-  format = "%a %d %b %H:%M:%S"
+  format = "%a %y-%m-%d %H:%M"
 }
 
 load {
@@ -58,7 +61,8 @@ disk "/" {
 }
 
 volume master {
-  format = "♪ %volume"
+  # f001 
+  format = "♫ %volume"
   device = "default"
   mixer = "Master"
   mixer_idx = 0
