--- a/config/i3/status.conf
+++ b/config/i3/status.conf
@@ -23,7 +23,7 @@ order += "load"
 order += "tztime local"
 
 wireless _first_ {
-  format_up = " (%quality at %essid) %ip"
+  format_up = " (%quality at %essid)"
   format_down = " down"
 }
 
