--- a/config/i3/status.conf
+++ b/config/i3/status.conf
@@ -8,7 +8,10 @@
 
 general {
   colors = true
-  interval = 5
+  color_good = "#00C853"
+  color_bad = "#d50000"
+  color_degraded = "#FFD600"
+  interval = 2
 }
 
 #order += "ipv6"
@@ -19,12 +22,13 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery 1"
 order += "volume master"
+order += "cpu_usage"
 order += "load"
 order += "tztime local"
 
 wireless _first_ {
-  format_up = " (%quality at %essid)"
-  format_down = " down"
+  format_up = "W: (%quality at %essid)"
+  format_down = "W: down"
 }
 
 ethernet _first_ {
@@ -34,9 +38,6 @@ ethernet _first_ {
 }
 
 battery 1 {
-  status_chr = "⚇ CHR"
-  status_bat = ""
-  status_full = "☻ FULL"
   format = "%status %percentage (%remaining)"
 }
 
@@ -52,6 +53,10 @@ tztime local {
   format = "%a %y-%m-%d %H:%M"
 }
 
+cpu_usage {
+  format = "%usage"
+}
+
 load {
   format = "%1min"
 }
@@ -62,7 +67,7 @@ disk "/" {
 
 volume master {
   # f001 
-  format = "♫ %volume"
+  format = "♪: %volume"
   device = "default"
   mixer = "Master"
   mixer_idx = 0
